# OSS-DocumentScanner

./: .env.ci  .env.ci.cardwallet  .env.ci.documentscanner  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  .prettierrc.js  .sentryclirc  .yarnrc.yml  CLOUD_SYNC_SETUP.md  COC.md  Document Scanner.ipynb  Gemfile  IMPLEMENTATION_SUMMARY.md  IgnoreNotFoundExportPlugin.js  LICENSE  PKPASS_EVALUATION.md  PKPASS_IMPLEMENTATION.md  QUICK_START.md  Readme.md  android_bundle  app.webpack.config.js  eslint.config.mjs  generate_ios_licences.js  ios_archive  nativescript.config.js  nativescript.config.logging.js  nativescript.config.sentry.js  nativescript.config.sentrylogging.js  nativescript.config.timeline.js  nsconfig.json  package.json  references.d.ts  svelte.config.custom.js  svelte.config.js  thirdparties_version.json  tsconfig.es5.json  (+3 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: build_android.yml  deploy-docs.yml  deploy.yml  release.yml  typings.yml
.maestro/: README.md  screenshot_card_wallet_camera.yaml  screenshot_card_wallet_detail.yaml  screenshot_card_wallet_main.yaml  screenshot_document_scanner_camera.yaml  screenshot_document_scanner_detail.yaml  screenshot_document_scanner_main.yaml
.yarn/patches/: svelte-check-npm-4.3.1-7aa559b153.patch
App_Resources/Android/: app.gradle  before-plugins.gradle  buildscript.gradle  gradle.properties  native-api-usage.json  settings.gradle
App_Resources/iOS/: Info.plist  Podfile  build.xcconfig
app/: AbsoluteLayoutWithMatrix.ts  ActionSheet.svelte  App.svelte  CActionBar.svelte  CropView.ts  DocumentsList.svelte  DualScrollView.ts  NestedScrollView.ts  PDFEdit.svelte  PDFView.svelte  ResultView.svelte  SettingLabelIcon.svelte  Test.svelte  ThirdPartySoftwareBottomSheet.svelte  animations.scss  app.android.scss  app.common.scss  app.ios.scss  app.scss  app.ts  bootstrap.ts  bottomsheet.ts  package.json  startHandler.ts  svelteNamespace.ts  variables.module.scss  variables.scss  variables.ts
app/android/: activity.android.ts  application.android.ts  camera_scan_activity.ts  cameraactivity.ts  licenses.json  quicktoggle.android.ts  sync_alarm_receiver.ts
app/components/: About.svelte  ActionSheet.svelte  App.svelte  CActionBar.svelte  Camera.svelte  CameraSettingsBottomSheet.svelte  CardView.svelte  CardsList.svelte  CropEditPage.svelte  CropEditView.svelte  CropView.svelte  DocumentEdit.svelte  DocumentView.svelte  DocumentsList.svelte  FullScreenImageViewer.svelte  IconButton.svelte  ImageExportPopover.svelte  ListItem.svelte  ListItemAutoSize.svelte  LoadingIndicator.svelte  ModalImportImage.svelte  ModalImportImages.svelte  OAuthWebViewModal.svelte  OCRDataBottomSheet.svelte  OCRDataView.svelte  OCRSettingsBottomSheet.svelte  OptionSelect.svelte  PDFEdit.svelte  PDFExportPopover.svelte  PDFPreview.svelte  PDFView.svelte  PageIndicator.svelte  PopoverBackgroundView.svelte  RotableImageView.svelte  SelectOCRLanguaguesModal.svelte  SelectedIndicator.svelte  SettingLabelIcon.svelte  Settings.svelte  SliderPopover.svelte  SyncIndicator.svelte  (+6 more)
app/helpers/: formatter.ts  lang.ts  locale.ts  theme.ts
app/i18n/: ar.json  bg.json  ca.json  cs.json  de.json  en.json  es.json  et.json  eu.json  fa.json  fi.json  fr.json  gl.json  he.json  hi.json  hr.json  hu.json  id.json  it.json  ja.json  kab.json  nb_NO.json  nl.json  oc.json  pa.json  pl.json  pt.json  pt_BR.json  ro.json  ru.json  sv.json  ta.json  tr.json  uk.json  vi.json  (+2 more)
cpp/: OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  example_optimized.cpp
cpp/cpp_test_app/: CMakeLists.txt  scanner.cpp
docs/: .gitignore  README.md  download.md  index.md  package-lock.json  package.json  support.md
docs-site/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
documentscanner/: bruno.json  test exist.bru
e2e/: setup.ts  test.e2e-spec.ts  tsconfig.json
fastlane/: Appfile  Fastfile  Matchfile  Pluginfile  README.md  getDist.js
nativescript-cameraview/: .gitignore  .prettierrc  README.md  lerna.json  package.json  references.d.ts  tsconfig.eslint.json  tsconfig.json
patches/: @nativescript+imagepicker+3.1.1.patch  patch-package+8.0.0.patch
plugin-nativeprocessor/: CropView.ts  index.android.ts  index.d.ts  index.ios.ts  index.ts  package.json
plugin-shared/: package.json
plugin-zip/: index.android.ts  index.d.ts  index.ios.ts  package.json
scripts/: IgnoreNotFoundExportPlugin.js  after-prepareNativeApp.js  ci.prepare.sh  createProguard.js  sourcemaptest.mjs
transformers/: ns-transform-native-classes.js
typings/: android.d.ts  colorpicker.android.d.ts  ios.d.ts  objc!SSZipArchive.d.ts  pdfbox.android.d.ts  references.d.ts  svelte.d.ts
webpdfviewer/: LICENSE  package.json  svelte.config.js  tsconfig.json  webpack.config.js
(+808 files in other folders)
